# cmake_with_gtest_coverage

./: .gitignore  CMakeLists.txt
sources/: hello.cpp  main.cpp
tests/: hello_test.cpp
